<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="night_theme">Тёмная тема</string>
    <string name="app_share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="nobody_ever_read_this">Пользовательское соглашение</string>
</resources>