<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    android:paddingHorizontal="@dimen/side_padding"
    android:paddingTop="@dimen/top_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="28dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/side_padding"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textSize="@dimen/text_size"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:foreground="?attr/selectableItemBackground"
            app:icon="@drawable/vector_search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/button_icon_padding"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/button_corner_radius" />

        <Button
            android:id="@+id/media_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/side_padding"
            android:backgroundTint="@color/white"
            android:text="@string/media"
            android:textSize="@dimen/text_size"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:foreground="?attr/selectableItemBackground"
            app:icon="@drawable/vector_media"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/button_icon_padding"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/button_corner_radius" />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textSize="@dimen/text_size"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:foreground="?attr/selectableItemBackground"
            app:icon="@drawable/vector_settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/button_icon_padding"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/button_corner_radius" />
    </LinearLayout>
</LinearLayout>